# flutter_golden_rabbit_novice_v3

./: .gitignore  README.md
calendar_scheduler_template/: pubspec.yaml
ch01/: 3_4_var.dart  3_5_dynamic.dart  3_6_final_const.dart  3_7_type.dart  4_1_list.dart  4_1_list_add.dart  4_1_list_map.dart  4_1_list_reduce.dart  4_1_list_where.dart  4_2_map.dart  4_3_set.dart  4_4_enum.dart  5_2_null.dart  5_4_type.dart  6_1_if.dart  6_2_switch.dart  6_3_for.dart  6_4_while.dart  7_1_function.dart  7_3_typedef.dart  8_try_catch.dart
ch02/: 2_2_named_constructor.dart  2_4_setter_getter.dart  2_class.dart  3_inheritance.dart  7_abstract.dart  8_generic.dart  9_static.dart
ch03/: 2_future.dart  4_1_stream.dart  4_2_broadcast_stream.dart
ch04/: 1_record.dart  2_destructuring.dart  3_1_switch_expresstion.dart  4_1_base_modifier.dart  4_1_base_modifier_b.dart  4_2_final_modifier_b.dart  4_3_interface_b.dart  4_4_sealed.dart  4_4_sealed_b.dart  4_5_mixin.dart
ch07_splash_screen/: pubspec.yaml
ch08_blog_web_app/: README.md  pubspec.yaml
ch09_image_carousel/: README.md  pubspec.yaml
ch10_u_and_i/: README.md  pubspec.yaml
ch11_random_dice/: pubspec.yaml
ch12_vid_player/: README.md  pubspec.yaml
ch19/calendar_scheduler_server_rust/: Cargo.toml
ch19/calendar_scheduler_server_rust/src/: lib.rs  main.rs
ch19/calendar_scheduler_server_rust/src/database/: memory.rs  mod.rs
ch19/calendar_scheduler_server_rust/src/handler/schedule/: delete.rs  get.rs  mod.rs  post.rs  types.rs
ch19/calendar_scheduler_server_rust/src/model/: mod.rs  schedule_model.rs
ch22/: .gitignore
(+310 files in other folders)
