[package]
name = "calendar_scheduler_server_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "http2", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "tracing"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa =  { version = "5", features = ["axum_extras", "uuid"] }
utoipa-axum = {version = "0.2"}
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }
